# ai-agents-google-course

./: .gitignore  README.md  test_gemini.py
day01/ai-sql-analyst-assistant/: README.md  metadata.json  server.ts
day01/ai-sql-analyst-assistant/images/: README.md
day01/ai-sql-analyst-assistant/src/: App.tsx  index.css  presets.ts  types.ts
day02/: README.md  upload_to_drive.py
day02/projects/: news.txt  summary.txt
day02/projects/bigquery-release-notes-tracker/: .gitignore  README.md  app.py  hello_app.py
day03/: README.md  product.json  product_model.py
day03/customer-support-agent/: agents-cli-manifest.yaml
day03/git_test/: auth.py
day03/weather-assistant/: README.md  agents-cli-manifest.yaml
day04/: .pre-commit-config.yaml  README.md  threat_model.md
day04/ambient-expense-agent/: Makefile  agents-cli-manifest.yaml
day04/shopping-assistant/: .env.example  agents-cli-manifest.yaml  pyproject.toml
day05/: README.md
day05/ambient-expense-agent/: .gitignore  Makefile  README.md  agents-cli-manifest.yaml  alice.json  deployment_metadata.json  pyproject.toml
day05/ambient-expense-agent/submission_frontend/: .env.example  .gcloudignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
day05/ambient-expense-agent/submission_frontend/services/: __init__.py  session_service.py
day05/ambient-expense-agent/submission_frontend/static/: app.js  styles.css
day05/ambient-expense-agent/submission_frontend/templates/: index.html
day05/ambient-expense-agent/submission_frontend/tests/: __init__.py  conftest.py  test_dashboard.py
(+34 files in other folders)
