[project]
name = "submission_frontend"
version = "0.1.0"
description = "FastAPI Manager Dashboard for Ambient Expense Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.4",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[agent-engines]>=1.44.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["services"]
py-modules = ["main"]
